--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   <a href="https://drive.google.com/drive/folders/1R1uYa-h4ksr5HuNJ80vgUIKz1qGqF3JV?usp=drive_link" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <i class="fab fa-database"></i>
+                    <i class="fa fa-database"></i>
                   </span>
                   <span>Data</span>
                 </a>
