update the bibtex

--- a/index.html
+++ b/index.html
@@ -338,12 +338,13 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-      @article{qu2024z,
-        title={Z-Splat: Z-Axis Gaussian Splatting for Camera-Sonar Fusion},
-        author={Qu, Ziyuan and Vengurlekar, Omkar and Qadri, Mohamad and Zhang, Kevin and Kaess, Michael and Metzler, Christopher and Jayasuriya, Suren and Pediredla, Adithya},
-        journal={arXiv preprint arXiv:2404.04687},
-        year={2024}
-      }</code></pre>
+        @article{qu2024z,
+          title={Z-splat: Z-axis gaussian splatting for camera-sonar fusion},
+          author={Qu, Ziyuan and Vengurlekar, Omkar and Qadri, Mohamad and Zhang, Kevin and Kaess, Michael and Metzler, Christopher and Jayasuriya, Suren and Pediredla, Adithya},
+          journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+          year={2024},
+          publisher={IEEE}
+        }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
